...
          {STEPS.map((_, index) => (
            <PaginationDot key={index} index={index} scrollX={scrollX} />
          ))}
        </View>

        <AppButton
          title={activeIndex === STEPS.length - 1 ? "Get Started" : "Continue"}
          onPress={handleNext}
          className="w-full h-[58px]"
        />

        <AppButton
          title="Skip"
...
